Refactor vercel.json by removing builds and updating rewrites
Removed builds section and updated destination paths for rewrites.

--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,17 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/**",
-      "use": "@vercel/static"
-    }
-  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "backend/index.js"
+      "destination": "/backend/api/index.js"
     },
     {
       "source": "/static/(.*)",
-      "destination": "frontend/static/$1"
+      "destination": "/frontend/static/$1"
     },
     {
       "source": "/(.*)",
-      "destination": "frontend/$1"
+      "destination": "/frontend/$1"
     }
   ]
 }
